# imis-platform-api

./: .gitignore  Readme.md  manage.py  pyproject.toml
app_platform/: handlers.py  models.py  urls.py  views.py
app_platform/fixtures/: cities.json  states.json
app_platform/management/commands/: loadgeography.py
app_platform/migrations/: 0001_initial.py  0002_delete_user.py  0003_state_remove_address_postal_code_and_more.py  0004_remove_city_postal_code_remove_city_status_and_more.py
imis/: asgi.py  settings.py  urls.py  wsgi.py
user_account/: apps.py  models.py  serializers.py  urls.py  views.py
user_account/migrations/: 0001_initial.py  0002_professional.py  0003_alter_user_email.py  0004_alter_professional_about_me_and_more.py
user_auth/: models.py
user_auth/migrations/: 0001_initial.py
